--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-router-dom": "^5.2.0"
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-loadable": "^5.5.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
@@ -33,18 +35,20 @@
     ]
   },
   "devDependencies": {
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-stage-0": "^6.24.1",
+    "crypto": "^1.0.1",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^4.2.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "style-loader": "^0.20.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "css-loader": "^0.28.11",
-    "style-loader": "^0.20.3"
+    "webpack-dev-server": "^3.10.3"
   }
 }
