--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "style-loader": "^0.20.3",
+    "uuid": "^8.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
